# evercast-broadcaster-software

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  formatcode.sh  install.sh  package.sh
 .circleci/: config.yml
.circleci/: config.yml
CI/: before-deploy-osx.sh  before-deploy-win.cmd  before-script-osx.sh  configure-script-win.cmd  install-dependencies-osx.sh
CI/util/: build-package-deps-osx.sh  gd_wait_cookie.sh  package-installer.cmd  win_build_ci.cmd  win_build_ndi.cmd
UI/: CMakeLists.txt  api-interface.cpp  auth-evercast.cpp  auth-evercast.hpp  crash-report.cpp  evercast-utils.cpp  evercast-utils.hpp  obs-app.cpp  obs-app.hpp  platform-osx.mm  platform-windows.cpp  platform-x11.cpp  properties-view.cpp  qt-wrappers.hpp  remote-text.cpp  remote-text.hpp  scene-listener.cpp  scene-listener.hpp  sparkle-updater.mm  window-basic-about.cpp  window-basic-auto-config.cpp  window-basic-login.cpp  window-basic-login.hpp  window-basic-main-outputs.cpp  window-basic-main-profiles.cpp  window-basic-main-scene-collections.cpp  window-basic-main.cpp  window-basic-main.hpp  window-basic-settings-stream.cpp  window-basic-settings.cpp  window-basic-settings.hpp  window-basic-source-select.cpp  window-basic-source-select.hpp  window-basic-stats.cpp  window-basic-status-bar.cpp  window-projector.cpp
UI/forms/: EBSNewVersion.ui  OBSAbout.ui  OBSBasic.ui  OBSBasicLogin.ui  OBSBasicSettings.ui  obs.qrc
UI/frontend-plugins/: CMakeLists.txt
UI/obs-frontend-api/: obs-frontend-api.h  obs-frontend-internal.hpp
UI/update/: new-version-window.cpp  new-version-window.hpp  update-window.cpp  update.cpp  update.hpp
UI/win-update/: win-update.cpp
cmake/Modules/: CopyMSVCBins.cmake  ObsCpack.cmake  ObsHelpers.cmake  WIX.template.in
cmake/osxbundle/: Info.plist  obslaunch.sh
docs/sphinx/: reference-libobs-graphics-graphics.rst  reference-libobs-util-platform.rst  reference-modules.rst  (+4 more)
libobs/: CMakeLists.txt  obs-audio.c  obs-cocoa.m  obs-encoder.c  obs-hotkeys.h  obs-internal.h  obs-nix.c  obs-output.c  obs-output.h  obs-properties.c  obs-properties.h  obs-scene.c  obs-service.c  obs-service.h  obs-source-transition.c  obs-source.c  obs-source.h  obs-video.c  obs-windows.c  obs.c  obs.h  obs.hpp  obsconfig.h.in
libobs-d3d11/: d3d11-rebuild.cpp  d3d11-subsystem.cpp  d3d11-subsystem.hpp  d3d11-texture3d.cpp
libobs-opengl/: gl-cocoa.m  gl-subsystem.c
libobs-winrt/: CMakeLists.txt
plugins/: CMakeLists.txt
plugins/mac-capture/: CMakeLists.txt  mac-screen-capture.m  plugin-main.c
plugins/mac-capture/data/locale/: en-US.ini
plugins/vlc-video/: CMakeLists.txt  vlc-video-source.c
vendor_skins/: macUnskin.sh
(+179 files in other folders)
